Fix: Change SVG advert icons from Black to White in Dark Mode
I propose this as a fix to the Thinkful icons, because right now, they're black in dark mode, making them difficult to see. So this is a quick fix making them white in dark mode.

--- a/app/assets/stylesheets/dark-mode.css
+++ b/app/assets/stylesheets/dark-mode.css
@@ -135,3 +135,7 @@ progress-circle__inner {
 .progress-circle__content {
   color: var(--dark-bg-accent) !important;
 }
+
+.advert__icon {
+  filter: invert(1);
+}
